k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.dmf.qvest-digital.com
      secretName: demo-app-tls
  rules:
    - host: demo.dmf.qvest-digital.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediamtx
                port:
                  number: 80
